# Seitokai

./: .flake8  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
seitokai/: README.md  __init__.py  forums.py  lists.py  messages.py  reactions.py  users.py
seitokai/api/: __init__.py  bot.py  dispatch.py  event_manager.py  gateway.py  marshaller.py  paginator.py  rest.py  websocket.py
seitokai/events/: __init__.py  _bases.py  _messages.py  _xp.py  base_events.py
seitokai/impl/: __init__.py  bot.py  dispatch.py  event_manager.py  gateway.py  marshaller.py  rest.py  websocket.py
