[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length     = 120
target-version  = ["py39"]
include         = ".*pyi?$"

[tool.pyright]
include = ["seitokai"]

reportMissingImports = true
reportMissingTypeStubs = true

pythonVersion = "3.10"
typeCheckingMode = "strict"
reportUnknownMemberType = "warning"  # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"  # Pretty much the same as reportUnknownMemberType
reportUnknownVariableType = "warning"  # Pretty much the same as reportUnknownMemberType
reportUnknownParameterType = "warning"  # Pretty much the same as reportUnknownMemberType
